got the line chart working with only one bug: when the number of points reaches the max, the graph starts overflowing across the y axis

--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -197,3 +197,13 @@ body {
 .chart .pieChart path {
     stroke: #FFF;
 }
+
+.chart .lineChart.axis path, .lineChart.axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+}
+
+.chart .lineChart.line {
+    fill: none;
+}
